# api/api/v1/$api.ts
@@ -1,21 +1,22 @@
 import type { AspidaClient, BasicHeaders } from 'aspida'
 import { dataToURLString } from 'aspida'
-import type { Methods as Methods0 } from './category'
-import type { Methods as Methods1 } from './category/_id@string'
-import type { Methods as Methods2 } from './money-diary'
-import type { Methods as Methods3 } from './money-diary/_id@string'
-import type { Methods as Methods4 } from './money-diary/month'
-import type { Methods as Methods5 } from './money-diary/search'
-import type { Methods as Methods6 } from './user'
-import type { Methods as Methods7 } from './user/_id@string'
+import type { Methods as Methods0 } from './auth/login'
+import type { Methods as Methods1 } from './category'
+import type { Methods as Methods2 } from './category/_id@string'
+import type { Methods as Methods3 } from './money-diary'
+import type { Methods as Methods4 } from './money-diary/_id@string'
+import type { Methods as Methods5 } from './money-diary/month'
+import type { Methods as Methods6 } from './money-diary/search'
+import type { Methods as Methods7 } from './user'
 
 const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
   const prefix = (baseURL === undefined ? '' : baseURL).replace(/\/$/, '')
-  const PATH0 = '/api/v1/category'
-  const PATH1 = '/api/v1/money-diary'
-  const PATH2 = '/api/v1/money-diary/month'
-  const PATH3 = '/api/v1/money-diary/search'
-  const PATH4 = '/api/v1/user'
+  const PATH0 = '/api/v1/auth/login'
+  const PATH1 = '/api/v1/category'
+  const PATH2 = '/api/v1/money-diary'
+  const PATH3 = '/api/v1/money-diary/month'
+  const PATH4 = '/api/v1/money-diary/search'
+  const PATH5 = '/api/v1/user'
   const GET = 'GET'
   const POST = 'POST'
   const PUT = 'PUT'
@@ -23,61 +24,62 @@ const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
   const PATCH = 'PATCH'
 
   return {
-    category: {
-      _id: (val1: string) => {
-        const prefix1 = `${PATH0}/${val1}`
-
-        return {
-          get: (option?: { config?: T | undefined } | undefined) =>
-            fetch<void, BasicHeaders, Methods1['get']['status']>(prefix, prefix1, GET, option).send(),
-          $get: (option?: { config?: T | undefined } | undefined) =>
-            fetch<void, BasicHeaders, Methods1['get']['status']>(prefix, prefix1, GET, option).send().then(r => r.body),
-          patch: (option: { body: Methods1['patch']['reqBody'], config?: T | undefined }) =>
-            fetch<void, BasicHeaders, Methods1['patch']['status']>(prefix, prefix1, PATCH, option).send(),
-          $patch: (option: { body: Methods1['patch']['reqBody'], config?: T | undefined }) =>
-            fetch<void, BasicHeaders, Methods1['patch']['status']>(prefix, prefix1, PATCH, option).send().then(r => r.body),
-          delete: (option?: { config?: T | undefined } | undefined) =>
-            fetch<void, BasicHeaders, Methods1['delete']['status']>(prefix, prefix1, DELETE, option).send(),
-          $delete: (option?: { config?: T | undefined } | undefined) =>
-            fetch<void, BasicHeaders, Methods1['delete']['status']>(prefix, prefix1, DELETE, option).send().then(r => r.body),
-          $path: () => `${prefix}${prefix1}`
-        }
-      },
-      post: (option: { body: Methods0['post']['reqBody'], config?: T | undefined }) =>
-        fetch<void, BasicHeaders, Methods0['post']['status']>(prefix, PATH0, POST, option).send(),
-      $post: (option: { body: Methods0['post']['reqBody'], config?: T | undefined }) =>
-        fetch<void, BasicHeaders, Methods0['post']['status']>(prefix, PATH0, POST, option).send().then(r => r.body),
-      get: (option?: { config?: T | undefined } | undefined) =>
-        fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json(),
-      $get: (option?: { config?: T | undefined } | undefined) =>
-        fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json().then(r => r.body),
-      $path: () => `${prefix}${PATH0}`
+    auth: {
+      login: {
+        post: (option: { body: Methods0['post']['reqBody'], config?: T | undefined }) =>
+          fetch<Methods0['post']['resBody'], BasicHeaders, Methods0['post']['status']>(prefix, PATH0, POST, option).json(),
+        $post: (option: { body: Methods0['post']['reqBody'], config?: T | undefined }) =>
+          fetch<Methods0['post']['resBody'], BasicHeaders, Methods0['post']['status']>(prefix, PATH0, POST, option).json().then(r => r.body),
+        $path: () => `${prefix}${PATH0}`
+      }
     },
-    money_diary: {
+    category: {
       _id: (val1: string) => {
         const prefix1 = `${PATH1}/${val1}`
 
         return {
-          put: (option: { body: Methods3['put']['reqBody'], headers?: Methods3['put']['reqHeaders'] | undefined, config?: T | undefined }) =>
-            fetch<void, BasicHeaders, Methods3['put']['status']>(prefix, prefix1, PUT, option).send(),
-          $put: (option: { body: Methods3['put']['reqBody'], headers?: Methods3['put']['reqHeaders'] | undefined, config?: T | undefined }) =>
-            fetch<void, BasicHeaders, Methods3['put']['status']>(prefix, prefix1, PUT, option).send().then(r => r.body),
+          get: (option?: { config?: T | undefined } | undefined) =>
+            fetch<void, BasicHeaders, Methods2['get']['status']>(prefix, prefix1, GET, option).send(),
+          $get: (option?: { config?: T | undefined } | undefined) =>
+            fetch<void, BasicHeaders, Methods2['get']['status']>(prefix, prefix1, GET, option).send().then(r => r.body),
+          patch: (option: { body: Methods2['patch']['reqBody'], config?: T | undefined }) =>
+            fetch<void, BasicHeaders, Methods2['patch']['status']>(prefix, prefix1, PATCH, option).send(),
+          $patch: (option: { body: Methods2['patch']['reqBody'], config?: T | undefined }) =>
+            fetch<void, BasicHeaders, Methods2['patch']['status']>(prefix, prefix1, PATCH, option).send().then(r => r.body),
           delete: (option?: { config?: T | undefined } | undefined) =>
-            fetch<void, BasicHeaders, Methods3['delete']['status']>(prefix, prefix1, DELETE, option).send(),
+            fetch<void, BasicHeaders, Methods2['delete']['status']>(prefix, prefix1, DELETE, option).send(),
           $delete: (option?: { config?: T | undefined } | undefined) =>
-            fetch<void, BasicHeaders, Methods3['delete']['status']>(prefix, prefix1, DELETE, option).send().then(r => r.body),
+            fetch<void, BasicHeaders, Methods2['delete']['status']>(prefix, prefix1, DELETE, option).send().then(r => r.body),
+          $path: () => `${prefix}${prefix1}`
+        }
+      },
+      post: (option: { body: Methods1['post']['reqBody'], config?: T | undefined }) =>
+        fetch<void, BasicHeaders, Methods1['post']['status']>(prefix, PATH1, POST, option).send(),
+      $post: (option: { body: Methods1['post']['reqBody'], config?: T | undefined }) =>
+        fetch<void, BasicHeaders, Methods1['post']['status']>(prefix, PATH1, POST, option).send().then(r => r.body),
+      get: (option?: { config?: T | undefined } | undefined) =>
+        fetch<Methods1['get']['resBody'], BasicHeaders, Methods1['get']['status']>(prefix, PATH1, GET, option).json(),
+      $get: (option?: { config?: T | undefined } | undefined) =>
+        fetch<Methods1['get']['resBody'], BasicHeaders, Methods1['get']['status']>(prefix, PATH1, GET, option).json().then(r => r.body),
+      $path: () => `${prefix}${PATH1}`
+    },
+    money_diary: {
+      _id: (val1: string) => {
+        const prefix1 = `${PATH2}/${val1}`
+
+        return {
+          put: (option: { body: Methods4['put']['reqBody'], config?: T | undefined }) =>
+            fetch<void, BasicHeaders, Methods4['put']['status']>(prefix, prefix1, PUT, option).send(),
+          $put: (option: { body: Methods4['put']['reqBody'], config?: T | undefined }) =>
+            fetch<void, BasicHeaders, Methods4['put']['status']>(prefix, prefix1, PUT, option).send().then(r => r.body),
+          delete: (option?: { config?: T | undefined } | undefined) =>
+            fetch<void, BasicHeaders, Methods4['delete']['status']>(prefix, prefix1, DELETE, option).send(),
+          $delete: (option?: { config?: T | undefined } | undefined) =>
+            fetch<void, BasicHeaders, Methods4['delete']['status']>(prefix, prefix1, DELETE, option).send().then(r => r.body),
           $path: () => `${prefix}${prefix1}`
         }
       },
       month: {
-        get: (option: { query: Methods4['get']['query'], headers?: Methods4['get']['reqHeaders'] | undefined, config?: T | undefined }) =>
-          fetch<Methods4['get']['resBody'], BasicHeaders, Methods4['get']['status']>(prefix, PATH2, GET, option).json(),
-        $get: (option: { query: Methods4['get']['query'], headers?: Methods4['get']['reqHeaders'] | undefined, config?: T | undefined }) =>
-          fetch<Methods4['get']['resBody'], BasicHeaders, Methods4['get']['status']>(prefix, PATH2, GET, option).json().then(r => r.body),
-        $path: (option?: { method?: 'get' | undefined; query: Methods4['get']['query'] } | undefined) =>
-          `${prefix}${PATH2}${option && option.query ? `?${dataToURLString(option.query)}` : ''}`
-      },
-      search: {
         get: (option: { query: Methods5['get']['query'], headers?: Methods5['get']['reqHeaders'] | undefined, config?: T | undefined }) =>
           fetch<Methods5['get']['resBody'], BasicHeaders, Methods5['get']['status']>(prefix, PATH3, GET, option).json(),
         $get: (option: { query: Methods5['get']['query'], headers?: Methods5['get']['reqHeaders'] | undefined, config?: T | undefined }) =>
@@ -85,33 +87,30 @@ const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
         $path: (option?: { method?: 'get' | undefined; query: Methods5['get']['query'] } | undefined) =>
           `${prefix}${PATH3}${option && option.query ? `?${dataToURLString(option.query)}` : ''}`
       },
-      get: (option?: { headers?: Methods2['get']['reqHeaders'] | undefined, config?: T | undefined } | undefined) =>
-        fetch<Methods2['get']['resBody'], BasicHeaders, Methods2['get']['status']>(prefix, PATH1, GET, option).json(),
-      $get: (option?: { headers?: Methods2['get']['reqHeaders'] | undefined, config?: T | undefined } | undefined) =>
-        fetch<Methods2['get']['resBody'], BasicHeaders, Methods2['get']['status']>(prefix, PATH1, GET, option).json().then(r => r.body),
-      post: (option: { body: Methods2['post']['reqBody'], headers?: Methods2['post']['reqHeaders'] | undefined, config?: T | undefined }) =>
-        fetch<void, BasicHeaders, Methods2['post']['status']>(prefix, PATH1, POST, option).send(),
-      $post: (option: { body: Methods2['post']['reqBody'], headers?: Methods2['post']['reqHeaders'] | undefined, config?: T | undefined }) =>
-        fetch<void, BasicHeaders, Methods2['post']['status']>(prefix, PATH1, POST, option).send().then(r => r.body),
-      $path: () => `${prefix}${PATH1}`
+      search: {
+        get: (option: { query: Methods6['get']['query'], config?: T | undefined }) =>
+          fetch<Methods6['get']['resBody'], BasicHeaders, Methods6['get']['status']>(prefix, PATH4, GET, option).json(),
+        $get: (option: { query: Methods6['get']['query'], config?: T | undefined }) =>
+          fetch<Methods6['get']['resBody'], BasicHeaders, Methods6['get']['status']>(prefix, PATH4, GET, option).json().then(r => r.body),
+        $path: (option?: { method?: 'get' | undefined; query: Methods6['get']['query'] } | undefined) =>
+          `${prefix}${PATH4}${option && option.query ? `?${dataToURLString(option.query)}` : ''}`
+      },
+      get: (option?: { headers?: Methods3['get']['reqHeaders'] | undefined, config?: T | undefined } | undefined) =>
+        fetch<Methods3['get']['resBody'], BasicHeaders, Methods3['get']['status']>(prefix, PATH2, GET, option).json(),
+      $get: (option?: { headers?: Methods3['get']['reqHeaders'] | undefined, config?: T | undefined } | undefined) =>
+        fetch<Methods3['get']['resBody'], BasicHeaders, Methods3['get']['status']>(prefix, PATH2, GET, option).json().then(r => r.body),
+      post: (option: { body: Methods3['post']['reqBody'], config?: T | undefined }) =>
+        fetch<void, BasicHeaders, Methods3['post']['status']>(prefix, PATH2, POST, option).send(),
+      $post: (option: { body: Methods3['post']['reqBody'], config?: T | undefined }) =>
+        fetch<void, BasicHeaders, Methods3['post']['status']>(prefix, PATH2, POST, option).send().then(r => r.body),
+      $path: () => `${prefix}${PATH2}`
     },
     user: {
-      _id: (val1: string) => {
-        const prefix1 = `${PATH4}/${val1}`
-
-        return {
-          get: (option?: { config?: T | undefined } | undefined) =>
-            fetch<void, BasicHeaders, Methods7['get']['status']>(prefix, prefix1, GET, option).send(),
-          $get: (option?: { config?: T | undefined } | undefined) =>
-            fetch<void, BasicHeaders, Methods7['get']['status']>(prefix, prefix1, GET, option).send().then(r => r.body),
-          $path: () => `${prefix}${prefix1}`
-        }
-      },
-      post: (option?: { config?: T | undefined } | undefined) =>
-        fetch<void, BasicHeaders, Methods6['post']['status']>(prefix, PATH4, POST, option).send(),
-      $post: (option?: { config?: T | undefined } | undefined) =>
-        fetch<void, BasicHeaders, Methods6['post']['status']>(prefix, PATH4, POST, option).send().then(r => r.body),
-      $path: () => `${prefix}${PATH4}`
+      post: (option: { body: Methods7['post']['reqBody'], config?: T | undefined }) =>
+        fetch<void, BasicHeaders, Methods7['post']['status']>(prefix, PATH5, POST, option).send(),
+      $post: (option: { body: Methods7['post']['reqBody'], config?: T | undefined }) =>
+        fetch<void, BasicHeaders, Methods7['post']['status']>(prefix, PATH5, POST, option).send().then(r => r.body),
+      $path: () => `${prefix}${PATH5}`
     }
   }
 }
