# api/api/v1/user/index.ts
@@ -1,6 +1,9 @@
 /* eslint-disable */
+import type * as Types from '../../../@types'
+
 export type Methods = {
   post: {
     status: 201
+    reqBody: Types.UserCreateDto
   }
 }
